2011-04-06  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * plugins/png.c : png plugin with support for 16-bit png files.

        * plugins/dcmtk/dcmdata/libsrc/SConscript: Turned of autogeneration of dcdictbi.cc.

        * tiff.c, giv_image.c, giv_image.h : Added support for 16 bit tiff images.

        * tiff.c : Added support for float (SAMPLEFORMAT_IEEEFP) images.

        * cfunix.h : Erased definition of size_to to fix Linux64 bit compilatin.

2011-04-05  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * Released version 0.9.18

        * Sconstruct: Created a dist command for generating distributions.

        * giv-win.gob : Created ifdef for windows as pango_cairo was severely broken.

        * giv-win.gob : Changed measure tool to a caliper.

2011-03-30  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-image.gob : Automatically convert monochrome gdkpixbuf images to monochrome GivImage. This fixes problem that autocontrast wasn't working for these images.

        * giv-histo.gob, giv-contrast.gob : Added interactive display of the gray level.

        * SConstruct: Added install of documentation to giv for 'scons install' under Linux.

        * giv-win.cc: Update date to 2011.

2011-03-28  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * SConstruct: Made win32 plugin path absolute ./plugins relative to installation directory.

        * giv.wine.nsi.in: Fixed bug that excluded loaders in installer.

2011-03-27  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * giv-contrast.gob, giv-histo.gob: Added histogram scale.

2011-03-25  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * Sconstruct: Rewritten installed to use fedora mingw installation.

        * tiff.c: Added tiff plugin.

        * fits.c, image.c, giv-win.gob: Support loading 3D fits files.
        They may be traversed with the Up/Down keys.

2010-02-25  Dov Grobgeld  <dov.grobgeld@gmail.com>

        * dicom.c : Support loading of dicom images with the extension