@@ -5,7 +5,7 @@ AM_CONFIG_HEADER(config.h)
 PACKAGE=givwidget
 GIVWIDGET_API_VERSION=2.0
 
-AM_INIT_AUTOMAKE(giv, 0.9.18)
+AM_INIT_AUTOMAKE(giv, 0.9.19)
 
 dnl Use libtool to get shared libraries
 LT_PREREQ
