@@ -36,7 +36,7 @@ if not env['SBOX']:
     env.SharedLibrary('png',
                       ['png.c'],
                       LIBPATH=['..','../gtkimageviewer','../agg','../pcre','../plis'] + env['LIBPATH'],
-                      LIBS=['png','z','giv-image']+env['LIBS'],
+                      LIBS=['giv-image']+env['LIBS'],
                       )
     
     SConscript('dcmtk/SConscript',
